@@ -7,6 +7,7 @@ v4.0.0 2025-01-??
        registerPluginTestFunction). NCRYSTAL_PLUGIN_RUNTESTS=1 and
        NCRYSTAL_PLUGIN_RUNTESTS (fixme). NB: NCRYSTAL_PLUGIN_LIST now accepts
        .SODYLIB as cross-platform alias for .so/.dylib/.dll
+       Describe new template and auto-detection after pip install plugin.
      * Removed several long-obsolete CMake options. Also removed any options
        related to python code, since those are now installed without cmake.
      * Removed SOVERSION from produced libraries (due to github issue #186).
